--- a/Inżynierka/nazwa_inżynierki/Frontend/src/sass/_typography.scss
+++ b/Inżynierka/nazwa_inżynierki/Frontend/src/sass/_typography.scss
@@ -1,72 +1,3 @@
 //Global Typography//
 
-//Font Faces For Primary Font//
-@font-face {
-  font-family: 'Lato';
-  src: url ('../fonts/lato-black.ttf') format('truetype');
-  font-weight: 900;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Lato';
-  src: url ('../fonts/lato-blackitalic.ttf') format('truetype');
-  font-weight: 900;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'Lato';
-  src: url ('../fonts/lato-bold.ttf') format('truetype');
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Lato';
-  src: url ('../fonts/lato-bolditalic.ttf') format('truetype');
-  font-weight: 700;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'Lato';
-  src: url ('../fonts/lato-italic.ttf') format('truetype');
-  font-weight: 400;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'Lato';
-  src: url ('../fonts/lato-light.ttf') format('truetype');
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Lato';
-  src: url ('../fonts/lato-lightitalic.ttf') format('truetype');
-  font-weight: 300;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'Lato';
-  src: url ('../fonts/lato-regular.ttf') format('truetype');
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Lato';
-  src: url ('../fonts/lato-thin.ttf') format('truetype');
-  font-weight: 100;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Lato';
-  src: url ('../fonts/lato-thinitalic.ttf') format('truetype');
-  font-weight: 100;
-  font-style: italic;
-}
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
