--- a/Inżynierka/nazwa_inżynierki/Frontend/src/sass/_utilities.scss
+++ b/Inżynierka/nazwa_inżynierki/Frontend/src/sass/_utilities.scss
@@ -1,5 +1,13 @@
 //Global Utilities//
 
 .form-field{
-    @include input-field;
+    @include input-field(6px, 15rem, 2.2rem);
+}
+
+.form-label{
+    margin-top: 30px;
+    margin-left: 3px;
+    margin-bottom: 3px;
+    font-size: 1.2rem;
+    font-weight: lighter;
 }
