--- a/Inżynierka/Farmino/Frontend/src/sass/_animations.scss
+++ b/Inżynierka/Farmino/Frontend/src/sass/_animations.scss
@@ -1,1 +1,10 @@
 //Global Animations//
+
+//Sudo-Selectors-Effects
+
+.pop-up {
+    li:hover {
+      transition: 0.8s;
+      transform: translateY(-2.5px);
+    }
+}
