--- a/Inżynierka/Farmino/Frontend/src/sass/_animations.scss
+++ b/Inżynierka/Farmino/Frontend/src/sass/_animations.scss
@@ -8,3 +8,16 @@
       transform: translateY(-2.5px);
     }
 }
+
+//Vue css aniamtions
+
+.fade-enter{
+  opacity: 0;
+}
+.fade-enter-active{
+  transition: opacity 0.5s;
+}
+.fade-leave-active{
+  transition: opacity 0.5s;
+  opacity: 0;
+}
