--- a/Inżynierka/Farmino/Frontend/src/sass/_mixins.scss
+++ b/Inżynierka/Farmino/Frontend/src/sass/_mixins.scss
@@ -7,3 +7,10 @@
     border:1px solid #ccc6c6;
     padding: 0 0.2rem;
 }
+
+@mixin flex-centred-site {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
