--- a/Inżynierka/Farmino/Frontend/src/sass/_mixins.scss
+++ b/Inżynierka/Farmino/Frontend/src/sass/_mixins.scss
@@ -9,7 +9,7 @@
 }
 
 @mixin flex-centred-site {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
