--- a/Inżynierka/Farmino/Frontend/src/sass/_mixins.scss
+++ b/Inżynierka/Farmino/Frontend/src/sass/_mixins.scss
@@ -14,3 +14,11 @@
     justify-content: center;
     align-items: center;
 }
+
+@mixin flex-centred-site-col {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
