--- a/Inżynierka/Farmino/Frontend/src/sass/_typography.scss
+++ b/Inżynierka/Farmino/Frontend/src/sass/_typography.scss
@@ -3,6 +3,6 @@
 //Primary Font//
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
-html,body{
+html,body,input,select,option{
     font-family: 'Roboto Condensed', sans-serif;
 }
