--- a/Inżynierka/Farmino/Frontend/src/sass/_mixins.scss
+++ b/Inżynierka/Farmino/Frontend/src/sass/_mixins.scss
@@ -22,3 +22,8 @@
     align-items: center;
     flex-direction: column;
 }
+
+@mixin container-border {
+    box-shadow: 1px 1px 6px rgba(179, 179, 179, 0.746);
+    border: 1px solid rgb(216, 216, 216);
+}
